
project(baekjoon)

add_executable(15552 10951.cpp)
add_executable(2741 2741.cpp)

add_executable(2742 2742.cpp)
add_executable(11021 11021.cpp)
add_executable(11022 11022.cpp)
add_executable(2438 2438.cpp)
add_executable(2439 2439.cpp)
add_executable(10871 10871.cpp)
add_executable(10952 10952.cpp)
add_executable(15551 15551.cpp)
add_executable(1110 1110.cpp)
add_executable(10818 10818.cpp)
add_executable(2562 2562.cpp)
add_executable(2577 2577.cpp)