
project(baekjoon)

add_executable(15552 10951.cpp)
add_executable(2741 2741.cpp)

add_executable(2742 2742.cpp)
add_executable(11021 11021.cpp)
add_executable(11022 11022.cpp)
add_executable(2438 2438.cpp)
add_executable(2439 2439.cpp)
add_executable(10871 10871.cpp)
add_executable(10952 10952.cpp)
add_executable(15551 15551.cpp)
add_executable(1110 1110.cpp)
add_executable(10818 10818.cpp)
add_executable(2562 2562.cpp)
add_executable(2577 2577.cpp)
add_executable(3052 3052.cpp)
add_executable(1546 1546.cpp)
add_executable(8958 8958.cpp)
add_executable(4344 4344.cpp)

add_executable(4673 4673.cpp)
add_executable(1065 1065.cpp)
add_executable(11654 11654.cpp)
add_executable(11720 11720.cpp)
add_executable(10809 10809.cpp)
add_executable(2675 2675.cpp)
add_executable(1157 1157.cpp)
add_executable(1152 1152.cpp)